Bug 253960 - view event: small icon before the orgainzer address is missing.
Summary: view event: small icon before the orgainzer address is missing.
Status: VERIFIED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-12 13:06 UTC by Ludwig Reiter
Modified: 2011-02-15 19:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-10-12 13:06:11 UTC
Version:           unspecified (using Devel) 
OS:                Linux

version: 4.5 20101008.1183810-1maemo1.1182955 (enterprise5)

Reproducible: Always

Steps to Reproduce:
1. create an event with attendee.
2. Look at the event.

Actual Results:  
The status icon before the organizer address is missing.

Expected Results:  
Should be there,
Comment 1 Sergio Martins 2010-10-22 12:17:33 UTC
SVN commit 1188408 by smartins:

Fix meeting organizer icon.

BUG: 253960

 M  +1 -1      incidenceformatter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1188408
Comment 2 Andre Heinecke 2011-02-15 19:01:54 UTC
The Icon is there on WinCE