Fix meeting organizer icon.

BUG: 253960

svn path=/trunk/KDE/kdepimlibs/; revision=1188408